Non Python Experiments

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     ARTURO BEGINS THE STREAM, A BLACK SCREEN AND THE CRISP SIZZLING SOUND OF HIS VAPORIZER GREET THE UNSUSPECTING AUDIENCE. "WHAT'S GOOD STREAM, UGH-HA UGH-HA UGH-HA." SMOKE BEGINS CLEARING FROM THE PORTABLE HOOKAH AND NYCFURBY'S VISAGE NOW APPEARS ONSCREEN. UNBLOCKABLE 60 SECOND ADS HIT THE VIEWERS IN WAVES. "YO MAX CPM UGH-HA UGH-HA." "YO I'M GONNA GO GRAB SOMETHING FROM THE STORE, I'LL PLAY SOME VIDEOS WHILE YOU WAIT." ARCHIVED FIGHTING GAME FOOTAGE OVERTAKES THE STREAM, SHOUTOUTS TO GODLIKE GAMING FOR THE MUSIC. "LEE CHUNG SHOULD BE HERE LATER." UGH-HA UGH-HA UGH-HA
     </p>
     <br>
+    <button id="honey">h</button>
     <img src="Blackeagles.png" border="10">
     <br><br>
     <ul>
@@ -34,6 +35,12 @@
           <td>March</td>
           <td>Kind of Happy</td>
     </table>
-      </tr>
+    </tr>
+    <script>
+      let body =document.querySelector('body');
+      document.querySelector('#honey').addEventListener('click', function() {
+              body.style.backgroundColor = 'blue';
+          });
+    </script>
   </body>
 </html>
