--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" type="text/css" href="tttstyle.css">
     <script type="text/javascript">
       function hello(){
         const heading = document.querySelector('h1');
@@ -14,9 +15,13 @@
         }
       }
     </script>
+    <script src='hello.js'></script>
   </head>
   <body>
     <h1> Hi </h1>
     <button onclick="hello()">Leave</button>
+    <div class="stage">
+      <div class="heart"></div>
+    </div>
   </body>
 </html>
