--- a/counter.html
+++ b/counter.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>0</h1>
-    <button>Count</button>
+    <button id="btnRight">Count</button>
     <br><br><br>
     <form class="" action="hello.html" method="post">
       <input autofocus id="name" placeholder="Name" type="text">
