--- a/index.html
+++ b/index.html
@@ -2,45 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width =device-width, initial-scale=1">
-    <title>Baby Website</title>
+    <title></title>
   </head>
+    <link rel="stylesheet" type="text/css" href="banlist.css">
   <body>
-    <h1>Markup Only No Javascript</h1>
-    <a href="file:///C:/Users/Box/Documents/Atom/Baby%20Website/link.html"target="_blank"><b>Hello</b> World</a>
-    <hr>
-    <p>BISCUITS HOPS ON COMMENTARY. ART NERVOUSLY LOOKS AT HIM WHILE HE HANDS HIM THE MICROPHONE."WHAT'S GOOD MONSTERS, ROLL UP, BLAZBLUE IS ASS, SKULLGIRLS IS STRAIGHT BOOTY" ARTURO SIGHS IN RELIEF AS BISCUITS HASNT SAID ANYTHING OFFENSIVE YET. "YO MONSTERS, HOOK ME UP WITH SOME DIVE KICK TORRENTS. I AINT SPENDING 20 BUCKS ON THAT GARBAGE FLASH GAME." "UGH-HA UGH-HA UGH-HA" AS ARTS HAND HOVERS OVER THE MIXER. "YO ART, WHENS BLAZGREEN?" ART NERVOUSLY LAUGHS "UGH-HA UGH-HA UGH-HA" AT BISCUITS' ATTEMPTS TO DESTROY E-SPORTS "MAN, ARE THERE ANY PEOPLE BESIDES ME THAT HAVENT GOTTEN NECK FROM SHERRY ?" BISCUITS ASKS THE STREAM. ART KNOWS HE HAS TO INTERFERE. "YO aaaAAAaaa, BISCUITS BLOWING IT UP". ART MUTES BISCUITS MIC AS HE CONTINUES TO RAMBLES ABOUT NECK AND TONSILS
-    <br><br>
-    ARTURO BEGINS THE STREAM, A BLACK SCREEN AND THE CRISP SIZZLING SOUND OF HIS VAPORIZER GREET THE UNSUSPECTING AUDIENCE. "WHAT'S GOOD STREAM, UGH-HA UGH-HA UGH-HA." SMOKE BEGINS CLEARING FROM THE PORTABLE HOOKAH AND NYCFURBY'S VISAGE NOW APPEARS ONSCREEN. UNBLOCKABLE 60 SECOND ADS HIT THE VIEWERS IN WAVES. "YO MAX CPM UGH-HA UGH-HA." "YO I'M GONNA GO GRAB SOMETHING FROM THE STORE, I'LL PLAY SOME VIDEOS WHILE YOU WAIT." ARCHIVED FIGHTING GAME FOOTAGE OVERTAKES THE STREAM, SHOUTOUTS TO GODLIKE GAMING FOR THE MUSIC. "LEE CHUNG SHOULD BE HERE LATER." UGH-HA UGH-HA UGH-HA
-    </p>
-    <br>
-    <button id="honey">h</button>
-    <img src="Blackeagles.png" border="10">
-    <br><br>
-    <ul>
-      <li>Choco
-          <ul>
-            <li>Choco</li>
-            <li>Choco</li>
-          </ul>
-      </li>
-      <li>Choco</li>
-    </ul>
-    <br>
-    <table border="1" cellpadding="10">
-      <tr>
-          <th colspan="2">Month Happiness</th>
-      </tr>
-      <tr>
-          <td>March</td>
-          <td>Kind of Happy</td>
-    </table>
-    </tr>
-    <script>
-      let body =document.querySelector('body');
-      document.querySelector('#honey').addEventListener('click', function() {
-              body.style.backgroundColor = 'blue';
-          });
-    </script>
+    <div id="tiles"></div>
+    <div class="info-container">
+      <div class="scroll">
+        <table class = "banList">
+          <tr>
+            <th>Card Type</th>
+            <th>Card Name</th>
+            <th>Change</th>
+          </tr>
+        </table>
+      </div>
+
   </body>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script type="text/javascript" src='banlist.js'></script>
+  <script type="text/javascript" src='egh.js'></script>
 </html>
