Updated Banlist, UI for 3 Lists

--- a/index.html
+++ b/index.html
@@ -2,15 +2,41 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
   </head>
     <link rel="stylesheet" type="text/css" href="banlist.css">
   <body>
+    <div id="dropDown">
+      <a href="https://discord.gg/mPdYA8McYa"><img src="discord.png" alt="" class="responsiveIMG" id="discord"></a>
+
+      <div class=""></div>
+    </div>
     <div id="tiles"></div>
+    <div class="cardContainer" id = "card1">
+      <div class="card">
+        <div class="cardCenter"></div>
+      </div>
+    </div>
+
+    <div class="cardContainer" id ="card2">
+      <div class="card">
+        <div class="crown"></div>
+      </div>
+    </div>
+    <div class="cardContainer" id="card3">
+      <div class="card">
+        <div class="num">
+          2
+        </div>
+      </div>
+    </div>
+
     <div class="info-container">
+
       <div class="scroll">
         <table class = "banList">
+          <th colspan="3" class ="tableTitle" id="partialHeader">Fully Banned</th>
           <tr>
             <th>Card Type</th>
             <th>Card Name</th>
